--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,10 @@ set(CMAKE_AUTOUIC ON)
 find_package(Qt6 COMPONENTS Widgets Gui REQUIRED)
 
 add_executable(UnitsConverter
-    main.cpp
+	UnitsConverter.cpp 
+	UnitsConverter.h
+	UnitsConverterInitializer.cpp
+	UnitsType.h    
+	main.cpp
 )
 target_link_libraries(UnitsConverter ${Boost_LIBRARIES})
